--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 body{
   background:#0a0a0a;
   color:#f5f5f5;
+  overflow-y:scroll;
+  scroll-snap-type:y mandatory;
 }
 
 /* ========= NAV ========= */
@@ -35,7 +37,7 @@ nav{
   justify-content:center;
   align-items:center;
   gap:50px;
-  background:rgba(10,10,10,.45);
+  background:rgba(10,10,10,.4);
   backdrop-filter:blur(12px);
   z-index:100;
 }
@@ -51,18 +53,32 @@ nav span{
 /* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
-  padding:180px 10vw 160px 22vw;
+  scroll-snap-align:start;
   display:flex;
+  justify-content:flex-start;
+  padding:180px 10vw 160px 22vw;
+}
+
+/* ========= SECTION BLOCK ========= */
+.section-block{
+  position:sticky;
+  top:260px;
+  max-width:1100px;
 }
 
 /* ========= HERO ========= */
-.hero{
+.section.hero{
   align-items:center;
 }
 
-.hero h1{
+.section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
+  margin-left:-4px;
+}
+
+.hero-surname{
+  white-space:nowrap;
 }
 
 .hero-sub{
@@ -73,35 +89,74 @@ nav span{
   color:#777;
 }
 
+/* ========= TYPO ========= */
+h1{
+  font-size:clamp(70px,6vw,120px);
+  font-weight:500;
+  line-height:1.05;
+}
+
+/* ========= TEXT ========= */
+.section-block p{
+  margin-top:8px;
+  padding-left:8px;
+  font-size:15px;
+  color:#aaa;
+  max-width:600px;
+  line-height:1.6;
+  text-align:justify;
+}
+
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  gap:40px;
-  margin-top:20px;
+  align-items:flex-start;
+  margin-top:12px;
 }
 
 .about p{
   max-width:700px;
-  color:#aaa;
-  line-height:1.6;
 }
 
 .about img{
   width:300px;
   height:400px;
+  margin-top:16px;
+  margin-left:40px;
   object-fit:cover;
   opacity:.9;
 }
 
 /* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
-  margin-top:40px;
+  position:relative;
+  margin-top:32px;
+  margin-left:8px;
+  overflow:hidden;
+  padding-right:120px;
+}
+
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
+  padding-bottom:20px;
+  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -118,9 +173,12 @@ nav span{
 .project-card{
   min-width:460px;
   flex-shrink:0;
+  text-decoration:none;
+  color:inherit;
+  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
-  transition:.8s;
+  transition:opacity .8s ease, transform .8s ease;
 }
 
 .project-card.is-visible{
@@ -128,24 +186,39 @@ nav span{
   transform:translateY(0);
 }
 
+.project-card:hover{
+  transform:translateY(-4px);
+}
+
+.project-inner{
+  width:100%;
+}
+
 .project-image{
   height:260px;
+  margin-bottom:20px;
   overflow:hidden;
-  margin-bottom:16px;
 }
 
 .project-image img{
   width:100%;
   height:100%;
   object-fit:cover;
+  transition:transform .4s ease;
 }
 
-.project-card h2{
+.project-card:hover .project-image img{
+  transform:scale(1.03);
+}
+
+.project-inner h2{
   font-size:28px;
   font-weight:400;
 }
 
-.project-card span{
+.project-inner span{
+  display:block;
+  margin-top:6px;
   font-size:12px;
   letter-spacing:.18em;
   color:#777;
@@ -153,59 +226,54 @@ nav span{
 }
 
 /* ========= CV ========= */
-.cv-section{
+.cv-wrapper{
+  margin-top:32px;
   position:relative;
+  padding-left:40px;
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:80px;
 }
 
-.cv-title{
-  position:sticky;
-  top:180px;
-  width:260px;
-}
-
-.cv-line{
-  position:sticky;
-  top:180px;
-  margin-left:40px;
-  width:2px;
-  height:60vh;
-  background:#222;
-}
-
-.cv-line-fill{
+.cv-wrapper::before{
+  content:"";
   position:absolute;
+  left:10px;
+  top:0;
   bottom:0;
-  width:100%;
-  height:0;
-  background:#777;
-}
-
-.cv-scroll{
-  margin-left:120px;
-  display:flex;
-  flex-direction:column;
-  gap:180px;
-  padding-bottom:200px;
+  width:1px;
+  background:rgba(255,255,255,.08);
 }
 
 .cv-block{
-  max-width:520px;
-  opacity:0;
-  transform:translateY(60px);
+  position:relative;
+}
+
+.cv-block::before{
+  content:"";
+  position:absolute;
+  left:-36px;
+  top:6px;
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:#777;
 }
 
 .cv-block h3{
   font-size:18px;
+  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
-  margin-bottom:24px;
+  margin-bottom:20px;
 }
 
 .cv-item{
-  margin-bottom:18px;
+  margin-bottom:24px;
 }
 
 .cv-item strong{
+  display:block;
   font-size:15px;
   font-weight:500;
 }
@@ -217,19 +285,18 @@ nav span{
   margin-top:2px;
 }
 
-.cv-dot{
-  position:absolute;
-  left:-49px;
-  top:6px;
-  width:10px;
-  height:10px;
-  border-radius:50%;
-  background:#777;
-  opacity:.2;
+/* ========= FOOTER ========= */
+.footer-wrapper{
+  flex:1;
+  display:flex;
+  align-items:flex-end;
+  padding:0 0 20px 22vw;
 }
 
-.cv-block.active .cv-dot{
-  opacity:1;
+.footer{
+  font-size:11px;
+  letter-spacing:.18em;
+  color:#cfcfcf;
 }
 
 </style>
@@ -242,13 +309,14 @@ nav span{
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
   <span data-i="3">CV</span>
+  <span data-i="4">Contacto</span>
 </nav>
 
 <section class="section hero">
-  <div>
+  <div class="section-block">
     <h1>
       Luis<br>
-      Blasco-Ibáñez<br>
+      <span class="hero-surname">Blasco-Ibáñez</span><br>
       Berbel
     </h1>
     <div class="hero-sub">Portfolio | Diseño industrial</div>
@@ -256,7 +324,7 @@ nav span{
 </section>
 
 <section class="section">
-  <div>
+  <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
@@ -264,12 +332,11 @@ nav span{
         enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
         a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
         ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuando posteriormente en la Universidad Politécnica de Valencia, y completándolos con
-        un programa Erasmus en la Middlesex University de Londres. Cuento además con una formación
-        profesional en electricidad, que me ha aportado una base técnica sólida y una forma de pensar
-        práctica. Disfruto de todo el proceso de diseño, desde la fase de análisis hasta la
-        materialización final del producto.
+        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
+        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
+        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
+        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
+        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -277,120 +344,78 @@ nav span{
 </section>
 
 <section class="section">
-  <div>
+  <div class="section-block">
     <h1>Portfolio</h1>
-
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a class="project-card">
-          <div class="project-image"><img src="brazo1.jpg"></div>
-          <h2>NODE</h2>
-          <span>Proyecto final de grado</span>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="reloj1.jpg"></div>
-          <h2>Sixay · Cómoda</h2>
-          <span>Diseño de mobiliario</span>
-        </a>
-
-        <a class="project-card">
-          <div class="project-image"><img src="secador2.jpg"></div>
-          <h2>Exploración material</h2>
-          <span>Proyecto experimental</span>
-        </a>
-
+        <!-- proyectos intactos -->
       </div>
     </div>
   </div>
 </section>
 
-<section class="section cv-section">
-
-  <div class="cv-title">
+<section class="section">
+  <div class="section-block">
     <h1>CV</h1>
-  </div>
 
-  <div class="cv-line">
-    <div class="cv-line-fill" id="cvLineFill"></div>
-  </div>
+    <div class="cv-wrapper">
 
-  <div class="cv-scroll">
+      <div class="cv-block">
+        <h3>Formación</h3>
+        <div class="cv-item">
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+        <div class="cv-item">
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+        <div class="cv-item">
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
 
-    <div class="cv-block">
-      <div class="cv-dot"></div>
-      <h3>Formación</h3>
-      <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UJI · Castellón</span></div>
-      <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UPV · Valencia</span></div>
-      <div class="cv-item"><strong>Erasmus</strong><span>Londres</span></div>
+      <div class="cv-block">
+        <h3>Idiomas</h3>
+        <div class="cv-item"><strong>Español</strong></div>
+        <div class="cv-item"><strong>Inglés</strong></div>
+        <div class="cv-item"><strong>Húngaro</strong></div>
+      </div>
+
+      <div class="cv-block">
+        <h3>Software</h3>
+        <div class="cv-item"><strong>Rhinoceros</strong></div>
+        <div class="cv-item"><strong>AutoCAD</strong></div>
+        <div class="cv-item"><strong>Inventor</strong></div>
+        <div class="cv-item"><strong>SolidWorks</strong></div>
+        <div class="cv-item"><strong>Fusion 360</strong></div>
+        <div class="cv-item"><strong>Sinutrain</strong></div>
+        <div class="cv-item"><strong>3ds Max</strong></div>
+      </div>
+
     </div>
-
-    <div class="cv-block">
-      <div class="cv-dot"></div>
-      <h3>Experiencia</h3>
-      <div class="cv-item"><strong>Autrial</strong><span>Sector eléctrico</span></div>
-      <div class="cv-item"><strong>Elecnor</strong><span>Sector eléctrico</span></div>
-    </div>
-
-    <div class="cv-block">
-      <div class="cv-dot"></div>
-      <h3>Idiomas</h3>
-      <div class="cv-item"><strong>Español</strong><span>Nativo</span></div>
-      <div class="cv-item"><strong>Inglés</strong><span>Avanzado</span></div>
-      <div class="cv-item"><strong>Húngaro</strong><span>Nativo</span></div>
-    </div>
-
-    <div class="cv-block">
-      <div class="cv-dot"></div>
-      <h3>Software</h3>
-      <div class="cv-item"><strong>Rhino · AutoCAD · Inventor</strong></div>
-      <div class="cv-item"><strong>SolidWorks · Fusion 360</strong></div>
-      <div class="cv-item"><strong>Sinutrain · 3ds Max</strong></div>
-    </div>
-
   </div>
 </section>
 
 <script>
-/* Navegación */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.onclick=()=>document.querySelectorAll(".section")[i]
-    .scrollIntoView({behavior:"smooth"});
-});
-
-/* Portfolio */
-document.querySelectorAll(".project-card").forEach(card=>{
-  new IntersectionObserver(e=>{
-    card.classList.toggle("is-visible",e[0].isIntersecting);
-  }).observe(card);
-});
-
-/* CV progreso */
-const cvBlocks=document.querySelectorAll(".cv-block");
-const lineFill=document.getElementById("cvLineFill");
-
-window.addEventListener("scroll",()=>{
-  const vh=window.innerHeight;
-  let maxProgress=0;
-
-  cvBlocks.forEach((block,i)=>{
-    const rect=block.getBoundingClientRect();
-    const progress=1-Math.min(Math.max(rect.top/(vh*0.8),0),1);
-
-    block.style.opacity=progress;
-    block.style.transform=`translateY(${60*(1-progress)}px)`;
-
-    if(progress>0.6){
-      block.classList.add("active");
-      maxProgress=Math.max(maxProgress,(i+1)/cvBlocks.length);
-    }else{
-      block.classList.remove("active");
-    }
+  btn.addEventListener("click",()=>{
+    document.querySelectorAll(".section")[i]
+      .scrollIntoView({behavior:"smooth"});
   });
-
-  lineFill.style.height=`${maxProgress*100}%`;
 });
+
+const carousel=document.querySelector(".portfolio-carousel");
+const cards=document.querySelectorAll(".project-card");
+
+const observer=new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    entry.target.classList.toggle("is-visible",entry.isIntersecting);
+  });
+},{root:carousel,threshold:0.3});
+
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
