--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ h1{
 }
 
 .cv-item{
-  margin-bottom:24px;
+  margin-bottom:18px;
 }
 
 .cv-item strong{
@@ -282,7 +282,6 @@ h1{
   display:block;
   font-size:13px;
   color:#888;
-  margin-top:2px;
 }
 
 /* ========= FOOTER ========= */
@@ -346,9 +345,48 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
+
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <!-- proyectos intactos -->
+
+        <a href="node.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="brazo1.jpg" alt="Proyecto NODE">
+            </div>
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="reloj1.jpg" alt="Cómoda Sixay">
+            </div>
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="secador2.jpg" alt="Exploración material">
+            </div>
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image"></div>
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
