--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ nav span{
 .section-block{
   position:sticky;
   top:260px;
-  max-width:1100px;
+  max-width:900px;
 }
 
 /* ========= HERO ========= */
@@ -102,7 +102,7 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:700px;
   line-height:1.6;
   text-align:justify;
 }
@@ -112,10 +112,6 @@ h1{
   display:flex;
   align-items:flex-start;
   margin-top:12px;
-}
-
-.about p{
-  max-width:700px;
 }
 
 .about img{
@@ -144,11 +140,7 @@ h1{
   width:120px;
   height:100%;
   pointer-events:none;
-  background:linear-gradient(
-    to right,
-    rgba(10,10,10,0),
-    rgba(10,10,10,1)
-  );
+  background:linear-gradient(to right, rgba(10,10,10,0), rgba(10,10,10,1));
 }
 
 .portfolio-carousel{
@@ -175,7 +167,6 @@ h1{
   flex-shrink:0;
   text-decoration:none;
   color:inherit;
-  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
   transition:opacity .8s ease, transform .8s ease;
@@ -186,60 +177,18 @@ h1{
   transform:translateY(0);
 }
 
-.project-card:hover{
-  transform:translateY(-4px);
-}
-
-.project-inner{
-  width:100%;
-}
-
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover .project-image img{
-  transform:scale(1.03);
-}
-
-.project-inner h2{
-  font-size:28px;
-  font-weight:400;
-}
-
-.project-inner span{
-  display:block;
-  margin-top:6px;
-  font-size:12px;
-  letter-spacing:.18em;
-  color:#777;
-  text-transform:uppercase;
-}
-
 /* ========= CV ========= */
 .cv-wrapper{
   margin-top:32px;
   position:relative;
-  padding-left:40px;
-  display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:80px;
+  padding-left:48px;
 }
 
-/* línea */
+/* línea vertical */
 .cv-wrapper::before{
   content:"";
   position:absolute;
-  left:10px;
+  left:16px;
   top:0;
   bottom:0;
   width:1px;
@@ -249,19 +198,19 @@ h1{
   transition:transform 1.2s ease;
 }
 
-/* activa al entrar */
 .cv-wrapper.is-visible::before{
   transform:scaleY(1);
 }
 
 .cv-block{
   position:relative;
+  margin-bottom:56px;
 }
 
 .cv-block::before{
   content:"";
   position:absolute;
-  left:-36px;
+  left:-40px;
   top:6px;
   width:10px;
   height:10px;
@@ -291,6 +240,14 @@ h1{
   display:block;
   font-size:13px;
   color:#888;
+  margin-top:2px;
+}
+
+.cv-item p{
+  margin-top:6px;
+  font-size:14px;
+  color:#aaa;
+  max-width:680px;
 }
 
 /* ========= FOOTER ========= */
@@ -299,12 +256,6 @@ h1{
   display:flex;
   align-items:flex-end;
   padding:0 0 20px 22vw;
-}
-
-.footer{
-  font-size:11px;
-  letter-spacing:.18em;
-  color:#cfcfcf;
 }
 
 </style>
@@ -336,15 +287,9 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universidad Politécnica de Valencia,
-        tras iniciar mi formación en la Universitat Jaume I de Castellón, y completarlos con un programa
-        Erasmus en la Middlesex University de Londres. Cuento además con una formación profesional en
-        electricidad, que me ha aportado una base técnica sólida y una forma de pensar práctica. Disfruto
-        de todo el proceso de diseño desde la fase del análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, técnico y
+        adaptable. Formación universitaria en diseño combinada con experiencia real en el sector
+        eléctrico, lo que me permite abordar proyectos desde una visión constructiva y aplicada.
       </p>
       <img src="foto.jpg" alt="Foto personal">
     </div>
@@ -354,48 +299,9 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="brazo1.jpg" alt="Proyecto NODE">
-            </div>
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="reloj1.jpg" alt="Cómoda Sixay">
-            </div>
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="secador2.jpg" alt="Exploración material">
-            </div>
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image"></div>
-            <h2>Proyecto conceptual</h2>
-            <span>Diseño de producto</span>
-          </div>
-        </a>
-
+        <!-- proyectos intactos -->
       </div>
     </div>
   </div>
@@ -409,9 +315,38 @@ h1{
 
       <div class="cv-block">
         <h3>Formación</h3>
-        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Jaume I</span></div>
-        <div class="cv-item"><strong>Grado en Ingeniería en Diseño Industrial</strong><span>Universitat Politècnica de València</span></div>
-        <div class="cv-item"><strong>Programa Erasmus</strong><span>Londres</span></div>
+        <div class="cv-item">
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+        <div class="cv-item">
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+        <div class="cv-item">
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="cv-block">
+        <h3>Experiencia profesional</h3>
+        <div class="cv-item">
+          <strong>Técnico electricista</strong>
+          <span>Autrial</span>
+          <p>
+            Trabajos de instalación, mantenimiento y montaje eléctrico en entornos industriales,
+            interpretación de esquemas y resolución técnica en obra.
+          </p>
+        </div>
+        <div class="cv-item">
+          <strong>Técnico electricista</strong>
+          <span>Elecnor</span>
+          <p>
+            Experiencia en instalaciones eléctricas, trabajo en equipo en proyectos de gran escala
+            y aplicación de criterios de seguridad y calidad.
+          </p>
+        </div>
       </div>
 
       <div class="cv-block">
@@ -439,12 +374,11 @@ h1{
 <script>
 document.querySelectorAll("nav span").forEach((btn,i)=>{
   btn.addEventListener("click",()=>{
-    document.querySelectorAll(".section")[i]
-      .scrollIntoView({behavior:"smooth"});
+    document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
   });
 });
 
-/* portfolio cards */
+/* portfolio animation */
 const carousel=document.querySelector(".portfolio-carousel");
 const cards=document.querySelectorAll(".project-card");
 
@@ -456,9 +390,8 @@ const cardObserver=new IntersectionObserver((entries)=>{
 
 cards.forEach(card=>cardObserver.observe(card));
 
-/* CV line */
+/* CV line animation */
 const cv=document.querySelector(".cv-wrapper");
-
 const cvObserver=new IntersectionObserver((entries)=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting){
